# whatceleb

./: .env  .env.example  docker-compose.yml
backend/: Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml
backend/app/: admin.py  models.py  serializers.py  views.py
backend/app/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: Dockerfile  vite.config.js
frontend/src/: App.jsx
