[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloudinary>=1.44.1",
    "django>=6.0.3",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg>=3.3.3",
    "python-dotenv[cli]>=1.2.2",
]
